Send KILL to itself on forwardResults failure handling